// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Should display an error if banner deletion fails 1`] = `
<div>
  <div
    class="tlp-alert-danger"
    data-current-language="en_US"
    data-msgid="
        An error occurred: %{ error_message }
    "
  >
    
        An error occurred: an error message
    
  </div>
   
  <div>
    <banner-presenter-stub
      message="some message"
    />
     
    <banner-deleter-stub />
  </div>
</div>
`;

exports[`App displays message and remove button when banner is not empty 1`] = `
<div>
  <!---->
   
  <div>
    <banner-presenter-stub
      message=<b>My banner content</b>
    />
     
    <banner-deleter-stub />
  </div>
</div>
`;
